--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
@@ -35,15 +34,13 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger-ui-express": "^5.0.0",
-    "typeorm": "^0.3.17",
-    "uuid": "^8.3.2",
-    "yaml": "^2.3.1"
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
@@ -62,11 +59,13 @@
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.2.3",
+    "swagger-ui-express": "^5.0.0",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "yaml": "^2.3.1"
   },
   "jest": {
     "moduleFileExtensions": [
