--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,15 @@ JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
+
+TYPEORM_CONNECTION=postgres
+TYPEORM_HOST=localhost
+TYPEORM_USERNAME=postgres
+TYPEORM_PASSWORD=password
+TYPEORM_DATABASE=db
+TYPEORM_PORT=5432
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=db
+
