--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,1 +1,7 @@
 FROM postgres:15-alpine
+ENV POSTGRES_USER=postgres
+ENV POSTGRES_PASSWORD=password
+ENV POSTGRES_DB=db
+
+CMD [ "postgres", "-c", "logging_collector=on", "-c", "log_statement=all" ]
+
