refactor: change environment variables names and add npm scripts

--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@ TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
 
 TYPEORM_CONNECTION=postgres
-TYPEORM_HOST=localhost
-TYPEORM_USERNAME=postgres
-TYPEORM_PASSWORD=password
-TYPEORM_DATABASE=db
-TYPEORM_PORT=5432
+DB_HOST=localhost
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=db
+DB_PORT=5432
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
