--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "migration:generate": "npm run typeorm migration:generate",
     "migration:run": "npm run typeorm migration:run",
     "migration:revert": "npm run typeorm migration:revert",
-    "docker:dev": "docker compose up app-dev",
-    "docker:prod": "docker compose up app-prod",
-    "docker:migration:gen": "docker compose up migration:gen",
-    "docker:down": "docker compose down && docker volume prune",
-    "docker:build:push": "docker compose build --no-cache --push"
+    "docker:dev": "docker-compose up app-dev",
+    "docker:prod": "docker-compose up app-prod",
+    "docker:migration:gen": "docker-compose up migration-gen",
+    "docker:down": "docker-compose down && docker volume prune",
+    "docker:build:push": "docker-compose build --no-cache --push",
+    "docker:scan": "docker scout quickview oryngali96/homelib-app:dev && docker scout quickview oryngali96/homelib-db:dev"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
