--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "migration:run": "npm run typeorm migration:run",
     "migration:revert": "npm run typeorm migration:revert",
     "docker:dev": "docker-compose up app-dev",
-    "docker:prod": "docker-compose up app-prod",
+    "docker:prod": "docker-compose up --build app-prod",
     "docker:migration:gen": "docker-compose up migration-gen",
     "docker:down": "docker-compose down && docker volume prune",
     "docker:build:push": "docker-compose build --no-cache --push",
