--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "docker:dev": "docker-compose up --build app-dev",
     "docker:prod": "docker-compose up --build app-prod",
     "docker:migration:gen": "docker-compose up --build migration-gen",
-    "docker:down": "docker-compose down && docker volume prune",
+    "docker:down": "docker-compose down -v",
     "docker:build:push": "docker-compose build --no-cache --push",
     "docker:scan": "docker scout quickview oryngali96/homelib-app:dev && docker scout quickview oryngali96/homelib-db:dev"
   },
