--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,16 +70,19 @@ services:
     build:
       context: .
       target: production
+    env_file: .env
+    environment:
+      DB_HOST: db-prod
     depends_on:
+      migration:
+        condition: service_completed_successfully
       db-prod:
         condition: service_healthy
+
     networks:
       - homelib_bridge
     ports:
       - ${PORT}:${PORT}
-    env_file: .env
-    environment:
-      DB_HOST: db-prod
 
   db-prod:
     container_name: homelib-db-prod
@@ -91,3 +94,18 @@ services:
     env_file: .env
     volumes:
       - dbdata:/var/lib/postgresql/data
+
+  migration:
+    container_name: homelib-app-prod-migration
+    image: oryngali96/homelib-app:prod-migration
+    build:
+      context: .
+      target: migration
+    depends_on:
+      db-prod:
+        condition: service_healthy
+    networks:
+      - homelib_bridge
+    env_file: .env
+    environment:
+      DB_HOST: db-prod
